force-app/core/main/default/objects/Account/fields/Preferred_name_Known_as__c.field-meta.xml
<CustomField>
    <fullName>Preferred_name_Known_as__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred name / Known as</label>
    <length>255</length>
    <type>Text</type>
</CustomField>