force-app/core/main/default/objects/Account/fields/Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient Primary Insurance</description>
    <label>EHR Primary Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Companies/ Departments</relationshipLabel>
    <relationshipName>Companies_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>