force-app/core/main/default/objects/Account/fields/Primary_Insurance_Non_EHR__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Non_EHR__c</fullName>
    <description>Primary health insurance company associated with the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text field. What is the patient primary insurance?</inlineHelpText>
    <label>Primary Insurance (Non-EHR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>