force-app/core/main/default/objects/Account/fields/Primary_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Member_Number__c</fullName>
    <formula>Primary_Insurance__r.Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Member Number</label>
    <type>Text</type>
</CustomField>