force-app/core/main/default/objects/Account/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of the referral as designated by the referring provider.</description>
    <inlineHelpText>Is the patient emergent, urgent, or routine</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergent</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>