force-app/core/main/default/objects/Account/fields/Procedure_Category__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Category__c</fullName>
    <label>Procedure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arterial- arteriogram / revascularization</fullName>
            </value>
            <value>
                <fullName>Arterial- PADnet Reading</fullName>
            </value>
            <value>
                <fullName>Arterial-PADnet Ultrasound</fullName>
            </value>
            <value>
                <fullName>Consult</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>SVI - EVLT (Laser)</fullName>
            </value>
            <value>
                <fullName>SVI - Procedure- Pending approval</fullName>
            </value>
            <value>
                <fullName>SVI - RF vein Ablation</fullName>
            </value>
            <value>
                <fullName>SVI - Varithena (superficial venous insufficiency)</fullName>
            </value>
            <value>
                <fullName>Venous- venogram / revascularization</fullName>
            </value>
            <value>
                <fullName>WH- embolization- pelvic congestion</fullName>
            </value>
            <value>
                <fullName>WH- UFE (Women’s Health)</fullName>
            </value>
            <value>
                <fullName>Woundcare_Epifix</fullName>
            </value>
            <value>
                <fullName>Woundcare_General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>