force-app/core/main/default/objects/Account/fields/PRODUCT_MED_Supply_category_Act__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_MED_Supply_category_Act__c</fullName>
    <description>the category of medical products supplied by the vendor</description>
    <label>PRODUCT_MED_Supply category-Acct</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Med_Supply_category</valueSetName>
    </valueSet>
</CustomField>