force-app/core/main/default/objects/Account/fields/RCG_Business_line_global__c.field-meta.xml
<CustomField>
    <fullName>RCG_Business_line_global__c</fullName>
    <description>Business line that this account/ company or department is related to</description>
    <label>RCG_Business_line_global</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCG_Business_line_global</valueSetName>
    </valueSet>
</CustomField>