force-app/core/main/default/objects/Account/fields/Reason_for_Out_of_Network_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Out_of_Network_Referral__c</fullName>
    <description>Reason the referral is sent out of network.</description>
    <inlineHelpText>Why was the patient out of network referral</inlineHelpText>
    <label>Reason for Out of Network Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider Preference</fullName>
            </value>
            <value>
                <fullName>Patient Preference</fullName>
            </value>
            <value>
                <fullName>Limited Provider Availability</fullName>
            </value>
            <value>
                <fullName>Service Not Offered</fullName>
            </value>
            <value>
                <fullName>Insurance Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>