force-app/core/main/default/objects/Account/fields/Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>