force-app/core/main/default/objects/Account/fields/Referred_To_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To Practitioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Referred To Practitioner)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>