force-app/core/main/default/objects/Account/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>region</label>
    <length>254</length>
    <type>Text</type>
</CustomField>