force-app/core/main/default/objects/Account/fields/Secondary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHR Secondary Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Companies/ Departments (Secondary Insurance)</relationshipLabel>
    <relationshipName>Companies_Departments1</relationshipName>
    <type>Lookup</type>
</CustomField>