force-app/core/main/default/objects/Account/fields/Secondary_Insurance_Plan_type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Plan_type__c</fullName>
    <description>please pick the type of Insurance plan</description>
    <inlineHelpText>please pick the type of Insurance plan</inlineHelpText>
    <label>Secondary Insurance Plan type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HMO-health maintenance organization</fullName>
            </value>
            <value>
                <fullName>PPO-Preferred Provider Organization</fullName>
            </value>
            <value>
                <fullName>POS-Point of service</fullName>
            </value>
            <value>
                <fullName>HSA-Health Savings account</fullName>
            </value>
            <value>
                <fullName>EPO-Exclusive provider organizations</fullName>
            </value>
            <value>
                <fullName>HDHP-High-deductible health plans</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>