force-app/core/main/default/objects/Account/fields/Secondary_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Number__c</fullName>
    <description>Field to store the Secondary Insurance Member Number</description>
    <formula>Secondary_Insurance__r.Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field to store the Secondary Insurance Member Number</inlineHelpText>
    <label>Secondary Member Number</label>
    <type>Text</type>
</CustomField>