force-app/core/main/default/objects/Account/fields/sendFeedbackSurvey__c.field-meta.xml
<CustomField>
    <fullName>sendFeedbackSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sendFeedbackSurvey</label>
    <type>Checkbox</type>
</CustomField>