force-app/core/main/default/objects/Account/fields/Service_supply_vchilli_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Service_supply_vchilli_Vendor__c</fullName>
    <description>the services provided in the event management space by this vendor</description>
    <inlineHelpText>please select as many of the services provided in the event management space by this vendor</inlineHelpText>
    <label>Service_supply_event_Mx-Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Supply_Event_management</valueSetName>
    </valueSet>
</CustomField>