force-app/core/main/default/objects/Account/fields/Service_supply_vendor__c.field-meta.xml
<CustomField>
    <fullName>Service_supply_vendor__c</fullName>
    <description>this describes the services supplied by a vendor</description>
    <label>Service_supply_vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_supply_vendor</valueSetName>
    </valueSet>
</CustomField>