force-app/core/main/default/objects/Account/fields/sheltered_care_beds__c.field-meta.xml
<CustomField>
    <fullName>sheltered_care_beds__c</fullName>
    <label>sheltered_care_beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>