force-app/core/main/default/objects/Account/fields/skilled__c.field-meta.xml
<CustomField>
    <fullName>skilled__c</fullName>
    <label>skilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>