force-app/core/main/default/objects/Account/fields/Slack_Channel_name__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_name__c</fullName>
    <formula>FirstName &amp;&quot;-&quot;&amp;LastName&amp;&quot;-&quot;&amp; Medstreaming_Patient_ID__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slack Channel name</label>
    <type>Text</type>
</CustomField>