force-app/core/main/default/objects/Account/fields/Social_Information_Notes__c.field-meta.xml
<CustomField>
    <fullName>Social_Information_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Information Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>