force-app/core/main/default/objects/Account/fields/Social_Worker__c.field-meta.xml
<CustomField>
    <fullName>Social_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Social Worker)</relationshipLabel>
    <relationshipName>Social_Worker</relationshipName>
    <type>Lookup</type>
</CustomField>