force-app/core/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>Specialty associated with the referral.</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Neurosurgery</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Podiatry</fullName>
            </value>
            <value>
                <fullName>Wound care</fullName>
            </value>
            <value>
                <fullName>Primary care</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family medicine</fullName>
            </value>
            <value>
                <fullName>Genealogy</fullName>
            </value>
            <value>
                <fullName>Infectious disease</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Physical therapy</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>