force-app/core/main/default/objects/Account/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdominal pain, Heavy menstrual bleeding, Increased urination</fullName>
            </value>
            <value>
                <fullName>Back/Neck Pain</fullName>
            </value>
            <value>
                <fullName>Leg pain - heaviness, swelling, throbbing, numbness, tingling</fullName>
            </value>
            <value>
                <fullName>Lower leg open sores/ulcers</fullName>
            </value>
            <value>
                <fullName>Varicose Veins</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Knee Pain</fullName>
            </value>
            <value>
                <fullName>Cold/flu</fullName>
            </value>
            <value>
                <fullName>Fibroids</fullName>
            </value>
            <value>
                <fullName>Hemorrhoids</fullName>
            </value>
            <value>
                <fullName>Knee Pain/Arthritis</fullName>
            </value>
            <value>
                <fullName>Leg pain, numbness, heaviness, pain while walking</fullName>
            </value>
            <value>
                <fullName>Prime Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>