force-app/core/main/default/objects/Account/fields/Telehealth_Hours__c.field-meta.xml
<CustomField>
    <fullName>Telehealth_Hours__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Telehealth Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>