force-app/core/main/default/objects/Account/fields/Tertiary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Accounts (Tertiary Insurance)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>