force-app/core/main/default/objects/Account/fields/TIN__c.field-meta.xml
<CustomField>
    <fullName>TIN__c</fullName>
    <description>Tax Identification Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>