force-app/core/main/default/objects/Account/fields/Total_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Contacts__c</fullName>
    <label>Total Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>