force-app/core/main/default/objects/Account/fields/Total_Revenue_from_Patient1__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_from_Patient1__c</fullName>
    <label>Total Revenue from Patient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>