force-app/core/main/default/objects/Account/fields/Total_revenue_from_patient__c.field-meta.xml
<CustomField>
    <fullName>Total_revenue_from_patient__c</fullName>
    <inlineHelpText>Shows total amount received from insurance for this patient.</inlineHelpText>
    <label>Total revenue from patient</label>
    <summarizedField>Opportunity.Total_Amount__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>