force-app/core/main/default/objects/Account/fields/Transport_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Transport_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Transport Coordinator)</relationshipLabel>
    <relationshipName>SNF_Account</relationshipName>
    <type>Lookup</type>
</CustomField>