force-app/core/main/default/objects/Account/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <description>twitter handle for the Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Twitter Handle</label>
    <length>18</length>
    <type>Text</type>
</CustomField>