force-app/core/main/default/objects/Account/fields/Type_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service__c</fullName>
    <label>Type Of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>2nd Opinion</fullName>
            </value>
            <value>
                <fullName>Radiology Services</fullName>
            </value>
            <value>
                <fullName>Lab Services</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Other (please specify in comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>