force-app/core/main/default/objects/Account/fields/under_22_beds__c.field-meta.xml
<CustomField>
    <fullName>under_22_beds__c</fullName>
    <label>under_22_beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>