force-app/core/main/default/objects/Account/fields/Work_Address__c.field-meta.xml
<CustomField>
    <fullName>Work_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Address</label>
    <type>Address</type>
</CustomField>