force-app/core/main/default/objects/Account/fields/Wound_Care_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Wound_Care_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wound Care Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Wound care Nurse)</relationshipLabel>
    <relationshipName>WoundCareNurse</relationshipName>
    <type>Lookup</type>
</CustomField>