force-app/core/main/default/objects/Account/fields/Wound_Care_Doc__c.field-meta.xml
<CustomField>
    <fullName>Wound_Care_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wound Care Doc</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Wound Care Doc)</relationshipLabel>
    <relationshipName>WoundCareDoc</relationshipName>
    <type>Lookup</type>
</CustomField>