force-app/core/main/default/objects/Account/fields/X1099_Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>X1099_Accounting_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>1099 Accounting Notes</label>
    <type>TextArea</type>
</CustomField>