force-app/core/main/default/objects/Account/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <label>Facility</label>
</RecordType>