force-app/core/main/default/objects/Account/recordTypes/Global.recordType-meta.xml
<RecordType>
    <fullName>Global</fullName>
    <active>true</active>
    <description>General account for MIMIT</description>
    <label>Global</label>
</RecordType>