force-app/core/main/default/objects/Account/recordTypes/Healthcare_insurance_company_plan.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_insurance_company_plan</fullName>
    <active>true</active>
    <description>Health Insurance companies and plans, departments etc</description>
    <label>Healthcare insurance company_plan</label>
</RecordType>