force-app/core/main/default/objects/Account/recordTypes/medical_practice_Healthcare_org.recordType-meta.xml
<RecordType>
    <fullName>medical_practice_Healthcare_org</fullName>
    <active>true</active>
    <description>Medical Practices / Hospitals</description>
    <label>medical_practice_Healthcare_org</label>
</RecordType>