force-app/core/main/default/objects/Account/recordTypes/Medical_School.recordType-meta.xml
<RecordType>
    <fullName>Medical_School</fullName>
    <active>true</active>
    <description>For all medical school</description>
    <label>Medical School</label>
</RecordType>