force-app/core/main/default/objects/Account/recordTypes/Not_for_Profit.recordType-meta.xml
<RecordType>
    <fullName>Not_for_Profit</fullName>
    <active>true</active>
    <description>accounts associated for not-for-profit</description>
    <label>Not-for-Profit</label>
</RecordType>