force-app/core/main/default/objects/Account/recordTypes/SNF_Skilled_Nursing_FAcilty.recordType-meta.xml
<RecordType>
    <fullName>SNF_Skilled_Nursing_FAcilty</fullName>
    <active>true</active>
    <description>Skilled Nursing Facilites. Including Short  and Long term and Assisted living</description>
    <label>SNF_Skilled_Nursing_FAcilty</label>
</RecordType>