force-app/core/main/default/objects/Account/recordTypes/Vchilli_Marketing_consulting.recordType-meta.xml
<RecordType>
    <fullName>Vchilli_Marketing_consulting</fullName>
    <active>true</active>
    <description>Accounts for Marketing Consulting Division</description>
    <label>Vchilli Marketing consulting</label>
</RecordType>