force-app/core/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>vendors that include purchased assets.</description>
    <label>Vendor</label>
</RecordType>